# meshshare

./: .gitignore  Justfile  LICENSE  README.md  config.example.yaml  pyproject.toml
docs/plans/: 2026-04-12-meshshare-mvp.md
src/meshshare/: __init__.py  app.py  config.py  models.py  registry.py
tests/: test_app.py  test_registry.py
